--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -112,11 +112,11 @@
 </div>
 
 
-<div class="container reviews">
+<div class="container">
   <p class="text-2xl text-gray-900 ">Reviews</p>
   <div class="recent-reviews">
     {% for review in item.reviews %}
-      <div class="recent-review">
+      <div class="relative py-2 border-t border-blue-300">
         <div class="flex flex-wrap mb-4">
           <div class="rating">
             <div class="rating-point" style="width: {{ review.rating | divided_by:5 | times:100 }}%"></div>
@@ -129,8 +129,8 @@
   </div>
   
   {%- if context.current_user.id %}
-    <form action="/reviews/create" method="post" class="form-review" >
-      <p class="title text-2xl text-gray-900 ">Add New Review</p>    
+    <form action="/reviews/create" method="post" class="form-review border border-blue-300 rounded" >
+      <p class="text-center text-2xl text-gray-900 ">Add New Review</p>    
       {% include 'authenticity_token' %}
       <input type="hidden" name="item[id]" value="{{ item.id }}">
       <input type="hidden" name="item[uuid]" value="{{ item.uuid }}">
@@ -138,10 +138,10 @@
       <input type="hidden" name="item[url]" value="{{ item_url }}">
       <input type="hidden" id="rating-value" class="rating-value" name="item[rating]" value="0">
       <div class="mt-3">
-        <div id="star-rating" class="rating variable">
+        <div id="star-rating" class="rating">
           <div id="star-rating-point" class="rating-point"></div>
         </div>
-        <label class="hidden" for="comment">Comment</label>
+        <label class="template" for="comment">Comment</label>
         <textarea class="w-full form-input" type="text" id="comment" name="item[comment]" rows="3"
           required></textarea>
       </div>
