'with_tailwind_css'

--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -146,7 +146,7 @@
           required></textarea>
       </div>
       <div class="text-right">
-        <button id="addreview" class="button">Add Review</button>
+        <button class="button inline">Add Review</button>
       </div>
     </form>
     <script>
