--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -3,50 +3,24 @@
     Profile Settings
   </h1>
 </div>
-<div class="lg:flex-grow lg:min-w-0">
-  <div class="max-w-xl">
-    <div class="justify-between mb-6 md:flex">
-      <div class="flex-none mb-4 md:mb-0">
-        <img src="https://img.icons8.com/cotton/2x/person-male.png"
-          alt="" class="w-40 h-40 mx-auto rounded-full shadow md:mx-0">
-      </div>
-      <div class="flex-grow min-w-0 md:ml-8">
-        <div class="flex justify-between">
-          <h3 class="min-w-0 mr-6">
-            <span class="text-2xl font-semibold break-words">
-              {{user.first_name}}
-            </span>
-            <span class="block text-sm uppercase">
-              {{user.last_name}}
-            </span>
-          </h3>
-        </div>
-      </div>
-    </div>
-    <section class="mb-4">
-      <header class="mb-2 md:flex md:justify-between">
-        <h4 class="text-lg font-semibold md:mr-6">
-          Account
-        </h4>
-        <div class="md:ml-auto">
-          <a href="/profile/edit" class="link">
-            Edit <span class="sr-only">name and avatar</span>
-          </a>
-        </div>
 
-        <!-- <div class="md:ml-auto"> -->
-        <!-- <a class="link" href="/profile/password"> -->
-        <!-- Change password -->
-        <!-- </a> -->
-        <!-- </div> -->
-      </header>
-      <p>Email: <b>{{user.email}}</b></p>
-      <p>Password: <b class="font-mono">******</b></p>
-    </section>
-    <!-- <p class="pt-4 border-t"> -->
-    <!-- <a href="/user/{{user.slug}}" class="link"> -->
-    <!-- How other people see my profile -->
-    <!-- </a> -->
-    <!-- </p> -->
+<div class="flex items-start max-w-xl">
+  <div class="mr-10">
+    <img src="https://img.icons8.com/cotton/2x/person-male.png" alt="" class="w-32 h-32 mx-auto rounded-full shadow md:mx-0">
   </div>
+
+  <div class="mr-10">
+    <p>Email: <b>{{ user.email }}</b></p>
+    <p>Password: <b class="font-mono">******</b></p>
+  </div>
+
+  <!--
+    TODO: implement
+  -->
+  <!--
+  <a href="/profile/edit" class="text-sm button">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.95 383.95" class="w-3 mr-1"><path d="M0 303.95v80h80l236.05-236.06-80-80zM377.7 56.05L327.9 6.24a21.37 21.37 0 00-30.2 0l-39.03 39.04 80 80 39.04-39.04a21.37 21.37 0 000-30.19z" fill="currentColor" /></svg>
+    Edit <span class="sr-only">name and avatar</span>
+  </a>
+  -->
 </div>
