--- a/app/views/partials/theme/simple/admin/index.liquid
+++ b/app/views/partials/theme/simple/admin/index.liquid
@@ -7,7 +7,7 @@
           <div class="mx-4">
 
             <h2>users</h2>
-            <table class="table">
+            <table class="table table-auto">
               <tr>
                 {% for user in users.results %}
                   <td>{% print user.id %}</td>
