--- a/app/views/partials/theme/simple/admin/recent.liquid
+++ b/app/views/partials/theme/simple/admin/recent.liquid
@@ -1,39 +1,45 @@
-<section class="py-8 px-4">
-  <div class="flex flex-wrap -mx-4">
+<section class="py-8">
+  <div class="flex flex-wrap">
     {% for metric in metrics %}
-      <div class="w-full lg:w-1/4 px-4 mb-4 lg:mb-0">
+      <div class="w-full px-4 mb-4 lg:w-1/4 lg:mb-0
+        {% if forloop.first %}
+          pl-0
+        {% elsif forloop.last %}
+          pr-0
+        {% endif %}
+      ">
         <div class="h-full border rounded shadow">
-          <div class="flex items-center justify-between py-3 px-4 border-b">
+          <div class="flex items-center justify-between px-4 py-3 border-b">
             <h3 class="text-lg font-heading">
-              {% print 'admin.metric.'| append: metric.name | append: ".name" | t %}
+              {{ 'admin.metric.'| append: metric.name | append: ".name" | t }}
             </h3>
-            <span class="py-1 px-3 text-sm text-white font-semibold bg-green-500 rounded-full">
-              {% print 'admin.metric.period.'| append: metric.period | t %}
+            <span class="px-3 py-1 text-sm font-semibold text-white bg-green-600 rounded-full">
+              {{ 'admin.metric.period.'| append: metric.period | t }}
             </span>
           </div>
           <div class="flex flex-col p-4">
-            <h3 class="text-3xl mb-3 font-heading font-semibold">
+            <h3 class="mb-3 text-3xl font-semibold font-heading">
               {% if metric.name == 'income' %}
-                {% print metric.value | pricify_cents %}
+                {{ metric.value | pricify_cents }}
               {% else %}
-                {% print metric.value %}
+                {{ metric.value }}
               {% endif %}
             </h3>
             <span>
-              {% print 'admin.metric.' | append: metric.name | append: '.delta' | t %}
+              {{ 'admin.metric.' | append: metric.name | append: '.delta' | t }}
             </span>
-            <span class="text-green-500">
+            <span class="text-lg text-green-600">
               {% if metric.name == 'income' %}
-                {% print metric.delta | pricify_cents %}
+                {{ metric.delta | pricify_cents }}
               {% else %}
-                {% print metric.delta %}
+                {{ metric.delta }}
               {% endif %}
             </span>
           </div>
         </div>
 
       <span class="text-xs">
-        {% print 'admin.metric.'| append: metric.name | append: ".description" | t %}
+        {{ 'admin.metric.'| append: metric.name | append: ".description" | t }}
       </span>
       </div>
     {% endfor %}
