--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -1,5 +1,5 @@
 {% if orders.total_entries > 0 %}
-  <table class="w-full table-auto">
+  <table class="table w-full table-auto">
     <thead>
       <tr>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.created_at" | t }}</th>
@@ -14,25 +14,25 @@
     <tbody>
       {% for order in orders.results %}
         <tr>
-          <td class="px-4 py-2 border-b">{{ order.created_at | l }}</td>
-          <td class="px-4 py-2 border-b">
+          <td class="px-4 py-2 text-left border-b">{{ order.created_at | l }}</td>
+          <td class="px-4 py-2 text-left border-b">
             {% function_rc item_url = 'link_to', item: order.item %}
             <a href="{{ item_url }}">
-              {% print order.item.name %}
-              <small> {% echo order.item.status.name | default: 'app.item_statuses.none' | t %}</small>
+              {{ order.item.name }}
+              <small> {{ order.item.status.name | default: 'app.item_statuses.none' | t }}</small>
             </a>
           </td>
-          <td class="px-4 py-2 border-b">{{ order.seller.email | split: '@' | first }}</td>
-          <td class="px-1 py-1 border-b">=></td>
-          <td class="px-4 py-2 border-b">{{ order.buyer.email | split: '@' | first }}</td>
-          <td class="px-4 py-2 border-b">
+          <td class="px-4 py-2 text-left border-b">{{ order.seller.email | split: '@' | first }}</td>
+          <td class="py-1 text-center border-b">=></td>
+          <td class="px-4 py-2 text-left border-b">{{ order.buyer.email | split: '@' | first }}</td>
+          <td class="px-4 py-2 text-left border-b">
             {{ order.status.name | default: 'missing-state-invalid-order' | t }}
-            {% if  order.order_status.timestamp %}
+            {% if order.order_status.timestamp %}
             <br/><small>{{ order.order_status.timestamp | to_time | l }}</small>
             {% endif %}
           </td>
-          <td class="px-4 py-2 border-b">{{ order.total | pricify_cents }}</td>
-          <td class="px-4 py-2 border-b">
+          <td class="px-4 py-2 text-left border-b">{{ order.total | pricify_cents }}</td>
+          <td class="px-4 py-2 text-left border-b">
             {% assign actions = 'theme/simple/dashboard/orders/actions/' | append: role  %}
             {% include actions %}
           </td>
