--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap my-6">
   <div class="w-full md:flex-1 md:w-auto">
-    <label for="k" class="block mb-1  capitalize">{{ 'app.search.keywords' | t  }}</label>
+    <label for="k" class="block mb-1 capitalize">{{ 'app.search.keywords' | t  }}</label>
     <input class="w-full form-input"
       name="k"
       id="k"
@@ -10,8 +10,8 @@
   </div>
 
   <div class="w-full my-6 md:my-0 md:ml-6 md:w-auto">
-    <label for="category" class="block mb-1  capitalize">{{ 'app.search.category' | t  }}</label>
-    <select class="form-select w-full" id="category" name="category">
+    <label for="category" class="block mb-1 capitalize">{{ 'app.search.category' | t  }}</label>
+    <select class="w-full form-select" id="category" name="category">
       <option value="" class="">{{ 'app.search.all_categories' | t }}</option>
       {% for category in filters.categories %}
         {% assign ident = category | split: '/' | size | minus: 1 | times: 2 %}
@@ -25,24 +25,17 @@
 
   <div class="w-full my-6 md:my-0 md:mx-6 md:w-auto">
     <label for="sort" class="block mb-1 capitalize">{{ 'app.search.sort_by' | t }}</label>
-    <select class="form-select w-full" id="sort" name="sort">
+    <select class="w-full form-select" id="sort" name="sort">
       <option value="" class="">{% print 'lib.sort_options.relevance' | t %}</option>
       {% for s in filters.sort_options %}
         <option value="{{ s[0] }}" {% if filters.query.sort == s[0] %}selected{% endif %}>{{ s[1] }}</option>
       {% endfor %}
     </select>
   </div>
-{% comment %}
-  <div class="w-full my-6 md:my-0 md:mx-6 md:w-auto">
-    <label for="tag" class="block mb-1  capitalize">{{ 'app.search.tags' | t  }}</label>
-    <select class="w-full form-select" id="tag" name="tag">
-      <option value="" class="">{{ 'app.search.all_tags' | t  }}</option>
-      {% for tag in filters.tags %}
-        <option value="{{ tag }}" {% if query.tag == tag %}selected{% endif %}>{{ tag }}</option>
-      {% endfor %}
-    </select>
-  </div>
-{% endcomment %}
 
   <button name="submit" value="search" class="w-full md:mt-auto md:w-auto button">{{ 'app.search.search' | t  }}</button>
 </div>
+
+<p class="text-lg text-gray-600">
+  {{ 'app.total_entries' | t }} {{ items.total_entries }}
+</p>
