--- a/app/views/partials/theme/simple/passwords/form.liquid
+++ b/app/views/partials/theme/simple/passwords/form.liquid
@@ -4,17 +4,13 @@
   <label class="block mt-3" for="password">
     <span class="block">Password</span>
     <input name="password[password]" type="password" id="password" class="w-full form-input" value="{{object.password}}"/>
-    {% if object.errors.password %}
-      <span class="text-red-800">{{ object.errors.password }}</span>
-    {% endif %}
+    {% include 'theme/simple/field_error', errors: object.errors.password %}
   </label>
 
   <label class="block mt-3" for="password_confirmation">
     <span class="block">Password Confirmation</span>
     <input name="password[password_confirmation]" type="password" id="password" class="w-full form-input" value="{{object.password_confirmation}}" />
-    {% if object.errors.password_confirmation %}
-      <span class="text-red-800">{{ object.errors.password_confirmation }}</span>
-    {% endif %}
+    {% include 'theme/simple/field_error', errors: object.errors.password_confirmation %}
   </label>
 
   <button class="mt-3 button">Update Password</button>
