--- a/app/views/partials/lib/commands/authentication_links/create/build.liquid
+++ b/app/views/partials/lib/commands/authentication_links/create/build.liquid
@@ -4,7 +4,7 @@
 
 {% parse_json object %}
 {
-  "email": "{{ user.email }}",
+  "email": "{{ email }}",
   "id":    "{{ user.id }}",
   "token": "{{ user.token }}",
   "host":  "{{ host }}"
