--- a/app/views/partials/theme/simple/layout/head.liquid
+++ b/app/views/partials/theme/simple/layout/head.liquid
@@ -5,8 +5,20 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="description" content="MVP Marketplace - buy & sell">
 
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-79667263-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131113778-1');
+</script>
+
+
 <link rel="stylesheet" href="{{ 'css/app.css' | asset_url }}">
 
 <link rel="shortcut icon" href="{{ 'images/favicon.ico' | asset_url }}" type="image/x-icon">
 
 <title>{{ 'app.title' | t }}</title>
+
