user unique list added

--- a/app/views/partials/theme/simple/business_card.liquid
+++ b/app/views/partials/theme/simple/business_card.liquid
@@ -1,3 +1,2 @@
 {% assign name = user | default: 'Unknown' %}
-
-<span class="business_card">By {{ name }}</span>
+<span class="business_card">By {{ name }}</span><br />
