--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -35,6 +35,7 @@
     <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
       <h2 class="text-sm tracking-widest ">
         {% include 'theme/simple/business_card', user: item.owner.email %}
+        <span><a href="/u/{{ item.owner.id }}">Search this user items</a></span>
       </h2>
 
       <h1 class="mb-1 text-2xl">
