--- a/app/views/partials/theme/simple/admin/users/index.liquid
+++ b/app/views/partials/theme/simple/admin/users/index.liquid
@@ -4,6 +4,7 @@
       <th class="w-8 text-left">{{ 'app.users.attr.id' | t }}</th>
       <th class="text-left">{{ 'app.users.attr.email' | t }}</th>
       <th class="text-left">{{ 'app.users.attr.created_at' | t }}</th>
+      <th class ="text-left">List</th>
     </tr>
   </thead>
 
@@ -13,6 +14,13 @@
         <td>{{ record.id }}</td>
         <td>{{ record.email }}</td>
         <td>{{ record.created_at | l }}</td>
+        <td>
+          <a href="/u/{{ record.id }}">
+          <button class="mt button button-sm mt-2">
+          ID {{ record.id }} list
+          </button>
+          </a>
+        </td>
       </tr>
     {% endfor %}
   </tbody>
