--- a/app/views/partials/theme/simple/items/index.liquid
+++ b/app/views/partials/theme/simple/items/index.liquid
@@ -1,4 +1,9 @@
 <div class="container mx-auto">
+  {% if current_user %}
+  <p></p><br />
+  {% else %}
+  <p>As you are <b>unregistered</b> user, you may don't have access to some content of this page.</p>
+  {% endif %}
   <div class="flex flex-wrap -mx-4 cards">
     {% if items.results.size > 0 %}
     {% for item in items.results %}
