--- a/app/views/partials/theme/simple/users/listing.liquid
+++ b/app/views/partials/theme/simple/users/listing.liquid
@@ -1,9 +1,10 @@
 <form action="/u/{{ user_id }}" name="search">
   {% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
   {% if current_user.email contains user.email %}
-  <p>You are now on <b>your</b> list</p>
+  {{ user | json }}
+  <p>{{ 'app.self-list' | t }}</p>
   {% else %}
-  <p>You are now on <b>{{ user.email }}</b> list</p>
+  <p>{{ 'app.user-list' | t: name: user.username }}</p>
   {% endif %}
   {% include 'theme/simple/items/index', items: items, items.owner.email %}
 </form>
