--- a/app/views/partials/theme/simple/users/listing.liquid
+++ b/app/views/partials/theme/simple/users/listing.liquid
@@ -1,10 +1,9 @@
 <form action="/u/{{ user_id }}" name="search">
   {% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
   {% if current_user.email contains user.email %}
-  {{ user | json }}
-  <p>{{ 'app.self-list' | t }}</p>
+  <p>{{ 'app.items.self-list' | t }}</p>
   {% else %}
-  <p>{{ 'app.user-list' | t: name: user.username }}</p>
+  <p>{{ 'app.items.user-list' | t: name: user.username, email: user.email }}</p>
   {% endif %}
   {% include 'theme/simple/items/index', items: items, items.owner.email %}
 </form>
