--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -2,6 +2,7 @@
 slug: profile
 ---
 {%liquid
-  function_rc user = 'lib/data/queries/users/find', id: context.current_user.id
+  assign user_id = context.current_user.id
+  function_rc user = 'lib/data/queries/users/find', id: user_id
   include 'theme/simple/profile/show', user: user
 %}
