--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -11,7 +11,7 @@
 
   <div class="mr-10">
     <p>User ID: <b class="font-mono">{{ user.id }}</b></p>
-    <p>Username: <b class="font-mono">{{ users.username }}</b></p>
+    <p>Username: <b class="font-mono">{{ user.username }}</b></p>
     <p>Email: <b class="font-mono">{{ user.email }}</b></p>
     <p>Password: <b class="font-mono">******</b></p>
     <p><a href="/u/{{ current_user.id }}">{{ 'app.items.yours' | t }}</a></p>
