--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -1,6 +1,8 @@
 ---
 slug: profile
 ---
-{% liquid
-  include 'theme/simple/profile/show', user: context.current_user
+{%liquid
+  assign user_id = context.current_user.id
+  function_rc user = 'lib/data/queries/users/find', id: user_id
+  include 'theme/simple/profile/show', user: user
 %}
