add posibility to follow a user

--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,6 +1,7 @@
 {% liquid
   function_rc filters = 'lib/data/queries/search/filters', query: context.params
   function_rc items = 'lib/data/queries/items/search', limit: 12, featured: true
+  function_rc current_user = 'lib/data/queries/users/find', id: context.current_user.id
 
-  include 'theme/simple/home/index', items: items, filters: filters
+  include 'theme/simple/home/index', items: items, filters: filters, current_user: current_user
 %}
