--- a/app/views/pages/items/index.liquid
+++ b/app/views/pages/items/index.liquid
@@ -5,8 +5,9 @@ slug: s
 {% liquid
   function_rc query = 'lib/data/queries/items/search/build', query: context.params, limit: 50
   function_rc items = 'lib/data/queries/items/search/execute', query: query
+  function_rc current_user = 'lib/data/queries/users/find', id: context.current_user.id
 
   function_rc filters = 'lib/data/queries/search/filters', query: context.params
 
-  include 'theme/simple/home/index', items: items, filters: filters
+  include 'theme/simple/home/index', items: items, filters: filters, current_user: current_user
 %}
