--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -18,22 +18,17 @@
         </div>
       {% endif %}
       {% comment %}
-      {{ item.tags | join: ", " }}
-      {% endcomment %}
+        {{ item.tags | join: ", " }}
+        {% endcomment %}
     </h3>
 
     <div class="flex justify-between">
       <p class="mt-1">
-        {% if item.orders[0].status == 'sold' %}
-        <span class="line-through">{{ item.price | pricify_cents }}</span>
-        <span class="font-semibold">&mdash; Sold</span>
-        {% else %}
         <span class="text-lg">{{ item.price | pricify_cents }}</span>
-        {% endif %}
       </p>
 
-      <h3 class="mb-1 text-xs ">
-        {% include 'theme/simple/business_card', user: item.owner.email %}
+      <h3 class="mb-1 text-xs">
+        {% include 'theme/simple/business_card', user: item.owner %}
       </h3>
     </div>
   </div>
